gadjid/src/snapshots/gadjid__test__small-DAG13-vs-DAG14.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-13
g_guess: 10-node-DAG-14
ancestor_aid:
  - 0.32222222222222224
  - 29
oset_aid:
  - 0.37777777777777777
  - 34
parent_aid:
  - 0.5888888888888889
  - 53
shd:
  - 0.4888888888888889
  - 22
t:
  - 3
  - 6
y: 5
z:
  - 0
  - 4
  - 7
  - 8
  - 9
possible_descendants_of_t_in_g_guess:
  - 3
  - 5
  - 6
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 2
  - 4
  - 5
  - 9
oset_for_t_onto_y_in_g_guess:
  - 0
  - 4
  - 9
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 7
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 4
  - 7
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
  - 2
  - 4
  - 5
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 4
  - 7
  - 8
  - 9
