gadjid/src/snapshots/gadjid__test__small-DAG14-vs-DAG15.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-14
g_guess: 10-node-DAG-15
ancestor_aid:
  - 0.25555555555555554
  - 23
oset_aid:
  - 0.25555555555555554
  - 23
parent_aid:
  - 0.6666666666666666
  - 60
shd:
  - 0.37777777777777777
  - 17
t:
  - 1
  - 2
  - 3
  - 4
  - 6
y: 0
z:
  - 7
possible_descendants_of_t_in_g_guess:
  - 1
  - 2
  - 3
  - 4
  - 6
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 0
  - 9
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 5
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 5
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 5
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 5
  - 7
  - 8
  - 9
