gadjid/src/snapshots/gadjid__test__small-DAG15-vs-DAG16.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-15
g_guess: 10-node-DAG-16
ancestor_aid:
  - 0.06666666666666667
  - 6
oset_aid:
  - 0.06666666666666667
  - 6
parent_aid:
  - 0.1
  - 9
shd:
  - 0.13333333333333333
  - 6
t:
  - 1
  - 3
  - 4
  - 7
y: 6
z:
  - 0
  - 5
  - 8
possible_descendants_of_t_in_g_guess:
  - 1
  - 3
  - 4
  - 7
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 6
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t: []
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y: []
not_validly_adjusted_for_in_g_guess_by_empty_set: []
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 5
  - 8
