gadjid/src/snapshots/gadjid__test__small-DAG16-vs-DAG17.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-16
g_guess: 10-node-DAG-17
ancestor_aid:
  - 0
  - 0
oset_aid:
  - 0
  - 0
parent_aid:
  - 0
  - 0
shd:
  - 1
  - 45
t:
  - 0
  - 3
  - 4
  - 5
  - 6
  - 7
y: 8
z:
  - 1
  - 2
  - 9
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 1
  - 2
  - 8
  - 9
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
  - 3
  - 5
  - 6
  - 7
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 1
  - 2
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 1
  - 2
  - 8
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 1
  - 2
  - 8
  - 9
