gadjid/src/snapshots/gadjid__test__small-DAG17-vs-DAG18.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-17
g_guess: 10-node-DAG-18
ancestor_aid:
  - 0.7444444444444445
  - 67
oset_aid:
  - 0.7
  - 63
parent_aid:
  - 0.9444444444444444
  - 85
shd:
  - 0.8888888888888888
  - 40
t:
  - 2
  - 8
y: 9
z:
  - 1
  - 4
  - 5
  - 6
possible_descendants_of_t_in_g_guess:
  - 0
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 3
  - 6
  - 7
  - 9
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 1
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 1
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 7
  - 9
