gadjid/src/snapshots/gadjid__test__small-DAG18-vs-DAG19.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-18
g_guess: 10-node-DAG-19
ancestor_aid:
  - 0.5666666666666667
  - 51
oset_aid:
  - 0.4777777777777778
  - 43
parent_aid:
  - 0.5777777777777777
  - 52
shd:
  - 0.3333333333333333
  - 15
t:
  - 1
  - 3
  - 6
  - 7
  - 8
y: 5
z:
  - 0
  - 2
  - 4
possible_descendants_of_t_in_g_guess:
  - 0
  - 1
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 5
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 1
  - 2
  - 3
  - 6
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 2
  - 9
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 2
  - 9
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 2
  - 4
  - 5
