gadjid/src/snapshots/gadjid__test__small-DAG19-vs-DAG10.snap
---
source: src/lib.rs
expression: "test(g_true, g_guess)"
---
g_true: 10-node-DAG-19
g_guess: 10-node-DAG-10
ancestor_aid:
  - 0.25555555555555554
  - 23
oset_aid:
  - 0.26666666666666666
  - 24
parent_aid:
  - 0.25555555555555554
  - 23
shd:
  - 0.28888888888888886
  - 13
t:
  - 1
  - 2
  - 4
  - 6
  - 7
  - 8
y: 3
z:
  - 5
  - 9
possible_descendants_of_t_in_g_guess:
  - 1
  - 2
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
  - 9
not_amenable_in_g_guess_wrt_t: []
proper_ancestors_of_y_in_g_guess_wrt_t:
  - 3
oset_for_t_onto_y_in_g_guess: []
not_validly_adjusted_for_in_g_guess_by_parents_of_t:
  - 0
  - 1
  - 2
not_validly_adjusted_for_in_g_guess_by_oset_for_t_onto_y:
  - 0
  - 5
not_validly_adjusted_for_in_g_guess_by_empty_set:
  - 0
  - 5
not_validly_adjusted_for_in_g_guess_by_z:
  - 0
  - 3
  - 5
  - 9
