gadjid/src/snapshots/gadjid__test__small-DAG3-vs-DAG4.snap
---
source: src/lib.rs
expression: "test(&format!(\"200{:0>2}.DAG-10\", true_id),\n    &format!(\"200{:0>2}.DAG-10\", guess_id))"
---
g_true: 20003.DAG-10
g_guess: 20004.DAG-10
ancestor_aid:
  - 0.16666666666666666
  - 15
oset_aid:
  - 0.16666666666666666
  - 15
parent_aid:
  - 0.26666666666666666
  - 24
shd:
  - 0.4666666666666667
  - 21
T:
  - 3
  - 5
  - 8
NAM: []
Y: 7
random_adj:
  - 0
  - 6
proper_ancestors:
  - 0
  - 6
  - 7
  - 9
oset:
  - 0
  - 8
  - 9
possible_descendants:
  - 1
  - 3
  - 4
  - 5
  - 6
  - 7
  - 8
parent_adjustment_NVA:
  - 1
  - 4
  - 6
  - 7
  - 8
  - 9
ancestor_adjustment_NVA:
  - 1
  - 4
  - 6
  - 7
  - 8
  - 9
nondescendant_adjustment_NVA:
  - 0
  - 1
  - 2
  - 4
  - 7
  - 9
oset_adjustment_NVA:
  - 0
  - 1
  - 4
  - 7
  - 8
  - 9
empty_adjustment_NVA:
  - 1
  - 4
  - 7
random_Z_adjustment_NVA:
  - 0
  - 1
  - 4
  - 6
  - 7
