gadjid/src/snapshots/gadjid__test__small-DAG5-vs-DAG6.snap
---
source: src/lib.rs
expression: "test(\"20005.DAG-10\", \"20006.DAG-10\")"
---
g_true: 20005.DAG-10
g_guess: 20006.DAG-10
ts:
  - 3
  - 7
  - 7
  - 5
  - 6
ys:
  - 9
  - 5
  - 0
  - 7
  - 7
zs:
  - []
  - - 8
  - - 8
  - []
  - []
nams:
  - []
  - []
  - []
  - []
  - []
nvas:
  - []
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 6
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 6
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 3
    - 4
    - 6
    - 7
    - 8
    - 9
  - - 0
    - 1
    - 2
    - 4
    - 5
    - 7
    - 8
    - 9
pa_true_1st_T: []
an_true_1st_T:
  - 3
ch_true_1st_T:
  - 5
de_true_1st_T:
  - 3
  - 5
poss_de_true_1st_T:
  - 3
  - 5
prop_an_true_1st_T_and_1st_Y:
  - 0
  - 2
  - 9
shd:
  - 0.37777777777777777
  - 17
oset_aid:
  - 0.25555555555555554
  - 23
parent_aid:
  - 0.6666666666666666
  - 60
ancestor_aid:
  - 0.25555555555555554
  - 23
